k8s/monitoring-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: monitoring
  template:
    metadata:
      labels:
        component: monitoring
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.18.1
          ports:
            - containerPort: 9090
        - name: grafana
          image: grafana/grafana:7.0.0
          ports:
            - containerPort: 3000
