k8s/monitoring-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: monitoring-pod
  labels:
    component: monitoring
spec:
  containers:
    - name: prometheus
      image: prom/prometheus:v2.18.1
      ports:
        - containerPort: 9090
    - name: grafana
      image: grafana/grafana:7.0.0
      ports:
        - containerPort: 3000
