k8s/monitoring-alertmanager.yml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: alertmanager
  ports:
    - port: 9093
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: alertmanager
  template:
    metadata:
      labels:
        component: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: prom/alertmanager:v0.20.0
          ports:
            - containerPort: 9093
          volumeMounts:
            - name: alertmanager-config
              mountPath: /etc/alertmanager/config.yml
              subPath: config.yml
          args:
            - --config.file=/etc/alertmanager/config.yml
            - --web.external-url=http://localhost/alertmanager
            - --web.route-prefix=/
      volumes:
        - name: alertmanager-config
          configMap:
            name: alertmanager-configmap
