k8s/monitoring-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: monitoring
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
    - name: prometheus
      port: 9090
      targetPort: 9090
