k8s/monitoring-grafana.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: grafana
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: grafana
  template:
    metadata:
      labels:
        component: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:7.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
            # - name: grafana-config
            #   mountPath: /etc/grafana/grafana.ini
            #   subPath: grafana.dev.ini
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-dashboards
              mountPath: /etc/grafana/provisioning/dashboards
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-configmap
        - name: grafana-datasources
          configMap:
            name: grafana-datasources-configmap
        - name: grafana-dashboards
          configMap:
            name: grafana-dashboards-configmap
