k8s/monitoring-prometheus.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: prometheus
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: prometheus
  template:
    metadata:
      labels:
        component: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.18.1
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-configmap
