k8s/monitoring-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /grafana/(.*)
            backend:
              serviceName: grafana-cluster-ip-service
              servicePort: 3000
          - path: /(prometheus/.*)
            backend:
              serviceName: prometheus-cluster-ip-service
              servicePort: 9090
